--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     padding: 0;
                     text-align: center;
                     font-size: 150;
-                    color: goldenrod;
+                    color: #f2bc7e;
                     top: 45%;
                 }
                 </style>
