--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
                     text-align: center;
                     font-size: 150;
                     color: #f2bc7e;
-                    top: 45%;
+                    top: 60%;
+                }
+                
+                img{
+                    margin: 0;
+                    padding: 0;
+                    top: 50%;
                 }
                 </style>
     <body bgcolor="#271642">
