--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
                     top: 60%;
                 }
                 
+                h2{
+                    margin: 0;
+                    padding: 0;
+                    text-align: center;
+                    font-size: 100;
+                    color: #f2bc7e;
+                    top: 70%;
+                }
+                
                 img{
                     margin: 0;
                     padding: 0;
@@ -31,9 +40,14 @@
         <img src="Logo.png" height="400" width="400">
         <h1>
         <i>
-            Coming Soon!
+            Vibes
         </i>
     </h1>
+            <h2>
+        <i>
+            Coming Soon!
+        </i>
+    </h2>    
 </center>
         </body>
 </html>
