--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>
         Vibes
     </title>
-            <link rel="icon"href="Logo.png"type ="image/x-icon"> 
+            <link rel="icon"href="Logo.png"type ="image/x-icon">
             <style>
                 body{
                     padding: 0;
@@ -12,42 +12,51 @@
 
                 h1{
                     margin: 0;
-                    padding: 0; 
-                    text-align: center;
+                    padding: 0;
                     font-size: 150;
                     color: #f2bc7e;
-                    top: 60%;
+                    top: 50%;
                 }
-                
+
                 h2{
                     margin: 0;
                     padding: 0;
-                    text-align: center;
                     font-size: 100;
                     color: #f2bc7e;
-                    top: 70%;
                 }
-                
+
                 img{
                     margin: 0;
                     padding: 0;
-                    top: 50%;
+                    vertical-align: middle;
                 }
+
+                #Fullpage {
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  height: 100%;
+                  width: 100%;
+}
                 </style>
     <body bgcolor="#271642">
         <br>
         <center>
+          <div id="Fullpage">
+            <div>
         <img src="Logo.png" height="400" width="400">
+        <br>
         <h1>
-        <i>
             Vibes
-        </i>
     </h1>
+    <br>
             <h2>
         <i>
             Coming Soon!
         </i>
-    </h2>    
+    </h2>
+    </div>
+    </div>
 </center>
         </body>
 </html>
